tests/od2trips/errors/incomplete_connections/from_missing1of2_allowed/errors.od2trips
Error: District '1' has no source.
